samples/_failures_safe/1761517991_923801_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5be30aa.c: In function ‘main’:
./samples/SAFE/__tmp_a5be30aa.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_a5be30aa.c:140:9: error: expected declaration or statement at end of input
